# aiopenapi3_vertiv

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/aiopenapi3_vertiv/: __init__.py  openapi.yaml
src/aiopenapi3_vertiv/description_document/: openapi.yaml
tests/: conftest.py  test_client.py  test_devices.py
tests/data/: a2d.json  afht3.json  i03.json  remotetemp.json  rs.json  snd.json  snh.json  snt.json  t3hd.json  thd.json  vrc.json
